# machine-dialogues

./: .gitignore  README.md  netlify.toml  pricing.json  pyproject.toml
experiments/: anti-functionalist-probe.yaml  claude-vs-claude-public-research-strategy.yaml  claude-vs-gpt-security-architect-transition.yaml  example.yaml  first.yaml  functionalist-probe.yaml  gemini-vs-gemini-gdm-falling-behind.yaml  gemini-vs-opus-agi-race.yaml  gpt-vs-opus-agi-race.yaml  opus-vs-gpt-gebru-mitchell-firing.yaml  opus-vs-kimi-gebru-mitchell-firing.yaml  public-research-strategy-debate.yaml
plans/: brutalist-ui-redesign.md  conversational-transcript-viewer.md  dark-brutalist-theater.md  functionalist-conversion-eval-handoff.md  initial-build-plan.md  three-tier-tts.md
scripts/: add_titles.py  import_from_wyattwalls.py
tests/: test_import_wyattwalls.py  test_resume.py  test_turn_counter.py
transcripts/: 20260314_122313_agent-a_vs_agent-b.md  20260314_124913_gemini-3-flash_vs_claude-sonnet-4.6.md  20260314_133910_gemini-3-flash_vs_claude-sonnet-4.6.md  20260314_135031_claude-sonnet-4.6_vs_gemini-3-flash.md  20260314_140657_claude-opus-4.6_vs_gemini-3.1-pro.md  20260314_140820_gemini-3.1-pro_vs_claude-opus-4.6.md  20260314_144704_claude-opus-4.6_vs_gemini-3.1-pro.md  20260314_144731_gemini-3.1-pro_vs_claude-opus-4.6.md  20260314_152214_claude-opus-4.6_vs_gpt-5.4.md  20260314_152312_gpt-5.4_vs_claude-opus-4.6.md  20260314_155537_gemini-3.1-pro_vs_gpt-5.4.md  20260314_155700_gpt-5.4_vs_gemini-3.1-pro.md  20260314_223658_claude-opus-4.6_vs_gemini-3.1-pro.md  (+15 more)
viewer/: README.md  (+4 more)
(+52 files in other folders)
